--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,9 @@
   functions = "netlify/functions"
   publish = "dist/spa"
 
-
 [functions]
-  external_node_modules = ["express"]
   node_bundler = "esbuild"
+  included_files = ["node_modules/**"]
   
 [[redirects]]
   force = true
